size of quiz added, dashboard added, ProgressChart and SkillBreakdown added

--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "react-router-dom": "^6.26.1",
     "react-select": "^5.8.0",
     "react-use": "^17.5.1",
+    "recharts": "^2.13.3",
+    "styled-components": "^6.1.13",
     "tesseract.js": "^5.1.1",
     "util": "^0.12.5"
   },
