--- a/.vercelignore
+++ b/.vercelignore
@@ -15,3 +15,4 @@
 /components/chart/_chart.js
 /components/chart/chart.js
 /components/settings/tts-settings.tsx
+/components/ProgressChart/ProgressChart.tsx
