--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "recharts": "^2.13.3",
     "styled-components": "^6.1.13",
     "tesseract.js": "^5.1.1",
-    "util": "^0.12.5"
+    "util": "^0.12.5",
+    "workbox-sw": "^7.3.0"
   },
   "devDependencies": {
     "@types/firebase": "^3.2.3",
