--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,7 @@
     "start_url": "/",
     "display": "standalone",
     "background_color": "#663E94",
-    "theme_color": "#FFFFFF",
+    "theme_color": "#663E94",
     "icons": [
       {
         "src": "/icons/icon-192x192.png",
