--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "studyfast",
+  "name": "devops4ever",
   "version": "0.1.0",
   "private": true,
   "license": "MIT",
@@ -25,10 +25,12 @@
     "@toolpad/core": "^0.7.0",
     "@use-gesture/react": "^10.3.1",
     "aws-sdk": "^2.1691.0",
-    "axios": "^1.7.7",
+    "axios": "^1.7.8",
+    "bcryptjs": "^2.4.3",
     "better-sqlite3": "^11.2.1",
     "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.4",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "embla-carousel-autoplay": "^8.1.6",
     "embla-carousel-react": "^8.1.6",
@@ -39,6 +41,7 @@
     "gamify.js": "^1.0.0",
     "googleapis": "^144.0.0",
     "install": "^0.13.0",
+    "jsonwebtoken": "^9.0.2",
     "lodash.filter": "^4.6.0",
     "next": "^14.2.16",
     "next-pwa": "^5.6.0",
@@ -53,9 +56,11 @@
     "react-flip-toolkit": "^7.2.4",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
+    "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-select": "^5.8.0",
+    "react-toastify": "^10.0.6",
     "react-use": "^17.5.1",
     "recharts": "^2.13.3",
     "styled-components": "^6.1.13",
