--- a/.vercelignore
+++ b/.vercelignore
@@ -17,3 +17,4 @@
 /components/settings/tts-settings.tsx
 /components/ProgressChart/ProgressChart.tsx
 /components/SkillBreakdown/SkillBreakdown.tsx
+/app/quiz/QuizPage.tsx
