--- a/.vercelignore
+++ b/.vercelignore
@@ -18,3 +18,4 @@
 /components/ProgressChart/ProgressChart.tsx
 /components/SkillBreakdown/SkillBreakdown.tsx
 /app/quiz/QuizPage.tsx
+/app/accordion/
