--- a/.vercelignore
+++ b/.vercelignore
@@ -24,3 +24,4 @@ import { app } from "firebase-admin"
 /app/quiz/Ansible/
 /app/quiz/Accordions copy.tsx
 /app/quiz/_page.tsx
+/app/quiz/page copy.tsx
