--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -24,12 +25,15 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@toolpad/core": "^0.7.0",
     "@use-gesture/react": "^10.3.1",
+    "algoliasearch": "^4.24.0",
     "aws-sdk": "^2.1691.0",
     "axios": "^1.7.8",
     "bcryptjs": "^2.4.3",
     "better-sqlite3": "^11.2.1",
     "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.4",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "embla-carousel-autoplay": "^8.1.6",
@@ -38,29 +42,34 @@
     "firebase-admin": "^12.6.0",
     "framer-motion": "^11.3.2",
     "fs": "^0.0.1-security",
+    "fuse.js": "^7.0.0",
     "gamify.js": "^1.0.0",
     "googleapis": "^144.0.0",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "lodash.filter": "^4.6.0",
-    "next": "^14.2.16",
+    "next": "^14.2.22",
     "next-pwa": "^5.6.0",
     "npm": "^10.8.2",
     "path": "^0.12.7",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-card-flip": "^1.2.3",
     "react-chartjs-2": "^5.2.0",
     "react-confetti": "^6.1.0",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
     "react-flip-toolkit": "^7.2.4",
     "react-icons": "^5.3.0",
+    "react-instantsearch-dom": "^6.40.4",
     "react-intersection-observer": "^9.13.1",
+    "react-native-searchbar": "^1.16.0",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-select": "^5.8.0",
+    "react-syntax-highlighter": "^15.6.1",
     "react-toastify": "^10.0.6",
+    "react-transition-group": "^4.4.5",
     "react-use": "^17.5.1",
     "recharts": "^2.13.3",
     "styled-components": "^6.1.13",
@@ -69,6 +78,7 @@
     "workbox-sw": "^7.3.0"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/firebase": "^3.2.3",
     "@types/node": "^20",
     "@types/react": "18.3.12",
