--- a/.vercelignore
+++ b/.vercelignore
@@ -27,5 +27,6 @@ import { app } from "firebase-admin"
 /app/quiz/page copy.tsx
 /app/quiz/save/
 /app/yaml/
+/app/crypto/
 /app/artifices/
 *readme.md
