--- a/.vercelignore
+++ b/.vercelignore
@@ -32,4 +32,5 @@ import { app } from "firebase-admin"
 /app/quiz/kubernetes/Services/
 /app/quiz/modele_QuizPage/
 /app/quiz/quizPage/
+/components/searchComponent/
 *readme.md
