--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "better-sqlite3": "^11.2.1",
     "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.4",
+    "cheerio": "^1.0.0",
     "crypto": "^1.0.1",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
@@ -48,6 +49,7 @@
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "lodash.filter": "^4.6.0",
+    "lottie-react": "^2.4.0",
     "next": "^14.2.22",
     "next-pwa": "^5.6.0",
     "npm": "^10.8.2",
@@ -59,6 +61,7 @@
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
     "react-flip-toolkit": "^7.2.4",
+    "react-h5-audio-player": "^3.10.0-rc.1",
     "react-icons": "^5.3.0",
     "react-instantsearch-dom": "^6.40.4",
     "react-intersection-observer": "^9.13.1",
@@ -72,6 +75,8 @@
     "react-transition-group": "^4.4.5",
     "react-use": "^17.5.1",
     "recharts": "^2.13.3",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
     "styled-components": "^6.1.13",
     "tesseract.js": "^5.1.1",
     "util": "^0.12.5",
@@ -85,6 +90,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
+    "null-loader": "^4.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.6.3"
